# pyprotostuben

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml  setup.yaml
.github/workflows/: ci.yaml  publish.yaml  pull-request.yaml  setup.yaml
examples/greeting/: README.md  buf.gen.yaml  buf.yaml  docker-compose.yml
examples/greeting/src/: client_brokrpc.py  server_brokrpc.py
examples/servicify/fastapi/: README.md
examples/servicify/fastapi/core/greeter/: greeter.py  model.py
examples/servicify/fastapi/core/message/: generator.py
examples/servicify/my_service/: README.md  test_client.py
examples/servicify/my_service/src/my_service/: test_server.py
examples/servicify/my_service/src/my_service/core/db/: check.py  logs.sql  users.sql
examples/servicify/my_service/src/my_service/core/greeter/: abc.py  greeter.py  model.py
examples/servicify/my_service/src/my_service/core/message/: generator.py
src/pyprotostuben/: logging.py  protoc.py  stack.py  string_case.py
src/pyprotostuben/codegen/: abc.py  builder.py  echo.py  model.py  module_ast.py  render.py  run.py
src/pyprotostuben/codegen/brokrpc/: generator.py  plugin.py
src/pyprotostuben/codegen/mypy/: builder.py  context.py  generator.py  info.py  model.py  plugin.py
src/pyprotostuben/codegen/mypy/strategy/: abc.py  module_ast.py
src/pyprotostuben/codegen/servicify/: abc.py  cli.py  entrypoint.py  generator.py  model.py
src/pyprotostuben/codegen/servicify/generator/: aiohttp.py  brokrpc.py  dataclasses.py  fastapi.py  model.py
src/pyprotostuben/pool/: abc.py  process.py
src/pyprotostuben/protobuf/: context.py  extension.py  file.py  location.py  parser.py  registry.py
src/pyprotostuben/protobuf/builder/: grpc.py  grpc_aio.py  message.py  message_immutable.py  resolver.py
src/pyprotostuben/protobuf/types/: registry.py
src/pyprotostuben/protobuf/types/resolver/: abc.py  ast.py  dependency.py
src/pyprotostuben/protobuf/visitor/: abc.py  decorator.py  dfs.py  info.py  model.py  stack.py  walker.py
src/pyprotostuben/python/: ast_builder.py  builder.py  builder2.py  info.py  writer.py
src/pyprotostuben/python/types/resolver/: abc.py  dependency.py
src/pyprotostuben/python/visitor/: abc.py  model.py  walker.py
tests/: conftest.py
tests/integration/: case.py  conftest.py  test_generator_cases.py  test_model.py  test_mypy.py
tests/integration/cases/: case.py
tests/integration/cases/000_greeting/: case.py
tests/integration/cases/000_greeting/expected_gen/: greeting_pb2.pyi  greeting_pb2_grpc.pyi
tests/integration/cases/000_greeting/proto/: greeting.proto
tests/integration/cases/001_types/: case.py
tests/integration/cases/001_types/expected_gen/: types_pb2.pyi
tests/integration/cases/001_types/proto/: types.proto
tests/integration/cases/002_foo/expected_gen/: foo_pb2.pyi
tests/integration/cases/002_foo/proto/: foo.proto
tests/integration/cases/002_grpc_service/expected_gen/: grpc_service_pb2.pyi  grpc_service_pb2_grpc.pyi
tests/integration/cases/003_complex/expected_gen/: external_pb2.pyi
tests/integration/cases/003_complex/proto/: complex.proto  external.proto
tests/integration/cases/003_message_nesting/: case.py
tests/integration/cases/003_message_nesting/expected_gen/: message_nesting_pb2_grpc.pyi
tests/integration/cases/003_message_nesting/proto/: message_nesting.proto
tests/integration/cases/004_message_import/expected_gen/: message_import_pb2.pyi
tests/integration/cases/004_message_import/proto/: message_import.proto
tests/integration/cases/case_000_greeting/: case.py  test_mypy.yml
tests/integration/cases/case_000_greeting/expected_gen/: greeting_brokrpc.py  greeting_pb2_grpc.pyi
tests/integration/cases/case_001_types/: case.py
tests/integration/cases/case_001_types/expected_gen/: types_pb2.pyi
tests/integration/cases/case_001_types/expected_gen_descriptors/: types_pb2.pyi
tests/integration/cases/case_001_types/proto/: types.proto
tests/integration/cases/case_002_grpc_service/: case.py
tests/integration/cases/case_002_grpc_service/expected_gen/: grpc_service_pb2_grpc.pyi
tests/integration/cases/case_002_grpc_service/proto/: grpc_service.proto
tests/integration/cases/case_003_message_nesting/expected_gen/: message_nesting_pb2.pyi  message_nesting_pb2_grpc.pyi
tests/integration/cases/case_004_message_import/expected_gen/: message1_pb2.pyi  message2_pb2.pyi  message3_pb2.pyi  message_import_pb2.pyi
tests/integration/cases/case_004_message_import/proto/: message1.proto  message2.proto  message3.proto  message_import.proto
tests/integration/cases/case_005_comments/expected_gen/: types_pb2.pyi  types_pb2_grpc.pyi
tests/integration/cases/case_005_comments/proto/: types.proto
tests/integration/cases/case_006_extensions/: case.py  test_mypy.yml
tests/integration/cases/case_006_extensions/expected_gen/: bar_brokrpc.py  bar_pb2_grpc.pyi  foo_pb2.pyi
tests/integration/cases/case_006_extensions/proto/: bar.proto  foo.proto
tests/integration/cases/case_007_rabbitmq/: case.py
tests/integration/cases/case_007_rabbitmq/expected_gen/: foo_brokrpc.py  foo_pb2.pyi
tests/integration/cases/case_007_rabbitmq/proto/: foo.proto
tests/integration/cases/complex/expected_gen/: complex_pb2.pyi
tests/integration/cases/complex/proto/: complex.proto
tests/integration/cases/foo/expected_gen/: foo_pb2.pyi  foo_pb2_grpc.pyi
tests/integration/cases/foo/proto/: foo.proto
tests/integration/cases/types/expected_gen/: types_pb2.pyi
tests/integration/cases/types/proto/: types.proto
tests/stub/: plugin.py  structs.py
tests/unit/: test_string_case.py
tests/unit/codegen/: test_run.py
tests/unit/pool/: test_process.py
tests/unit/protobuf/: test_registry.py
tests/unit/python/: test_builder.py  test_info.py
tests/unit/python/visitor/: test_walker.py
