[tool.poetry]
name = "pyprotostuben"
version = "0.2.1"
description = "Generate Python MyPy stub modules from protobuf files."
authors = ["zerlok <danil.troshnev@gmail.com>"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Code Generators",
    "Typing :: Typed",
]

[tool.poetry.scripts]
protoc-gen-mypy-stub = "pyprotostuben.protoc:gen_mypy_stub"
protoc-gen-brokrpc = "pyprotostuben.protoc:gen_brokrpc"
protoc-gen-echo = "pyprotostuben.protoc:echo"

[tool.poetry.dependencies]
python = "^3.9"
protobuf = "^5.28.3"

[tool.poetry.group.dev.dependencies]
types-protobuf = "^5.28.3.20241030"
mypy = "^1.13.0"
pytest = "^8.3.3"
pytest-cov = "^6.0.0"
ruff = "^0.7.4"
grpc-stubs = "^1.53.0.5"
# TODO: specify pypi package version
brokrpc = { path = "../brokrpc", extras = ["aiormq"], develop = true, python = "^3.12" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
include = ["src/**/*.py", "tests/**/*.py"]
extend-exclude = ["tests/**/expected_gen/**.py"]
force-exclude = true
line-length = 120
output-format = "pylint"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN", # because we use mypy
    "D", # TODO: add docstrings to public code
    "FA", # TODO: consider should we use __annotations__
    "TD", # no task tracking
    "FIX", # TODO: consider enable it against new code on pull requests
    "COM812", # because ruff format suggests to skip it
    "ISC001", # because ruff format suggests to skip it
    "RET505", # clashes with mypy exhaustiveness check
    "S101", # allow asserts for tests checks and mypy help
]

[tool.mypy]
files = ["src", "tests"]
strict = true


[[tool.mypy.overrides]]
module = ["tests.integration.cases.*.expected_gen.*"]
ignore_missing_imports = true
ignore_errors = true

[tool.pytest.ini_options]
pythonpath = [
    "src",
]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
]
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@abc.abstractmethod",
    "if __name__ == .__main__.:",
    "if t.TYPE_CHECKING:",
]
show_missing = true
